# context-manager

./: .gitignore  LICENSE  README.md  conda-requirements.txt  pyproject.toml  requirements.txt  setup.py
src/context_manager/: __init__.py  cli.py  core.py
src/context_manager/components/: __init__.py
src/context_manager/components/ai_insights/: __init__.py  ai_insight_generator.py  insight_generator.py
src/context_manager/components/code_analysis/: code_analyzer.py  code_generator.py
src/context_manager/components/dependency_management/: __init__.py  dependency_tracker.py
src/context_manager/components/project_tracking/: __init__.py  context_system.py  project_context_manager.py
src/context_manager/integrations/: github_integration.py
src/context_manager/utils/: __init__.py  onboarding.py
tests/: conftest.py  test_context_manager.py  test_dependency_management.py  test_project_context.py
