[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "context-manager"
version = "0.1.0"
description = "AI-Powered Intelligent Project Development Assistant"
authors = ["Verbatim AI Team <dev@verbatim.ai>"]
readme = "README.md"
packages = [{include = "context_manager", from = "src"}]
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.10"
typer = "^0.9.0"
rich = "^13.5.0"
networkx = "*"
numpy = "*"
pillow = "*"
pyyaml = "*"
requests = "*"
sympy = "*"
typing-extensions = "*"
torch = {version = "*", optional = true}
torchvision = {version = "*", optional = true}
torchaudio = {version = "*", optional = true}

[tool.poetry.extras]
ml = ["torch", "torchvision", "torchaudio"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
setuptools = "*"
mypy = "*"
black = "*"
isort = "*"

[tool.poetry.scripts]
context-manager = "context_manager.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_generics = true
strict_optional = true
